src/app/my-portfolio/my-portfolio.scss
@use "../main/main.scss" as main;
@use "../../styles/mixins.scss" as mixin;
@use "../../styles/styles.scss" as styles;

$project-img-width: 620px;
$project-img-height: 393px;


section{
    @include mixin.d-flex($flex-direction: column, $gap: 0px)
}

h1{
    transform: translateY(50%);
    background-color: styles.$background-color;
    padding: 0 16px;
}

.portfolio-wrap{
    padding: 100px 0px;
    width: 100%;
    @include mixin.d-flex($flex-direction: column, $gap: 80px);
    position: relative;
}

.img-frame-onhover-uneven{
    position: relative;
    width: $project-img-width;
    height: $project-img-height;
    > img{
        width: 100%;
        height: 100%;
    }

    &::after{
        content: "";
        position: absolute;
        top: 20px;
        left: 20px;
        width: 100%;
        height: 100%;
        border: 4px solid black;
        box-sizing: border-box;
        opacity: 0;
        transition: opacity 0.3s ease;
    }

    &:hover::after{
        opacity: 100;
    }

    &::before{
    content: url('../../assets/img/portfolio-arrow-white.svg');
        background-color: black;
        position: absolute;
        z-index: 100;
        right: -56px;
        top: calc(0.5 * $project-img-height - 20px);
        height: 40px;
        width: 40px;
        padding: 16px;
        border-radius: 50%;
        opacity: 0;
        rotate: 135deg;
        transition: opacity 0.3s ease;
        transition: rotate 0.5s ease 0.3s;
    }
    &:hover::before{
        opacity: 100;
        rotate: 270deg;
    }

}

.img-frame-onhover-even{
    position: relative;
    width: $project-img-width;
    height: $project-img-height;
    > img{
        width: 100%;
        height: 100%;
    }

    &::before{
        content: url('../../assets/img/portfolio-arrow-white.svg');
        background-color: black;
        position: absolute;
        z-index: 100;
        left: -52px;
        top: calc(0.5 * $project-img-height - 20px);
        height: 40px;
        width: 40px;
        padding: 16px;
        border-radius: 50%;
        opacity: 0;
        rotate: 135deg;
        transition: opacity 0.3s ease;
        transition: rotate 0.5s ease 0.3s;
    }

    &::after{
        content: "";
        position: absolute;
        top: 20px;
        right: 20px;
        width: 100%;
        height: 100%;
        border: 4px solid black;
        box-sizing: border-box;
        opacity: 0;
        transition: opacity 0.3s ease;
    }

    &:hover::after{
        opacity: 100;
    }

    &:hover::before{
        opacity: 100;
        rotate: 0deg;
    }

}

.project-wrap-uneven{
    @include mixin.d-flex($justify-content: flex-start, $align-items: flex-start, $gap: 80px);
    position: relative;
    width: 100%;
}

.project-wrap-even{
    @include mixin.d-flex($justify-content: flex-end, $align-items: flex-start, $gap: 80px);
    position: relative;
    width: 100%;
}

aside{
    height: $project-img-height;
}

.aside-even{
    @include mixin.d-flex($flex-direction: column, $justify-content: space-between, $align-items: flex-start);
}

.aside-uneven{
    @include mixin.d-flex($flex-direction: column, $justify-content: space-between, $align-items: flex-end);
}

.description-wrap{
    @include mixin.d-flex($flex-direction: column, $align-items: flex-start, $justify-content: flex-end, $gap:16px);
    width: $project-img-width;
    height: $project-img-height;
}

.uneven{
    position: absolute;
    left: 0;
    bottom: 0;
    transition: left 0.3s ease;
}

.uneven:hover{
    left: calc($project-img-width + 80px);
}

.even{
    position: absolute;
    right: 0;
    bottom: 0;
}

.title{
    @include mixin.font("Syne", 800, 45px, $line-height:100%);
}

.subtitle{
    @include mixin.font("Overpass", 400, 23px);
    color: styles.$highlight-color;
}

.description{
    @include mixin.font("Overpass", 400, 16px);
}

.number{
    @include mixin.font("Syne", 700, 48px);
}

